Minor update & testing features